--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,10 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
+KEY_PATH=C:/Users/ZhiQiang/Documents/zzq.jks
+KEY_PASS=1234zzq
+ALIAS_NAME=zzqdev
+ALIAS_PASS=1234zzq
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
